src/test/resources/tokens/invalid/integer_missing_value_hex.unpick
unpick v3
const int
    0 = 0x